k8s/app/app-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vproapp
  namespace: devops-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vproapp
  template:
    metadata:
      labels:
        app: vproapp
    spec:
      terminationGracePeriodSeconds: 60

      containers:
        - name: vproapp
          image: sansv/tomcat-app-image:v1
          ports:
            - name: vproapp-port
              containerPort: 8080

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /login
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /login
              port: 8080
            initialDelaySeconds: 180
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 5
