k8s/app/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vproapp
  namespace: prod
spec:
  selector:
    app: vproapp
  ports:
  - port: 8080
